Pagination: Fix wrapping on small screens + Update table example

--- a/src/MudBlazor/Styles/components/_pagination.scss
+++ b/src/MudBlazor/Styles/components/_pagination.scss
@@ -2,6 +2,8 @@
 
 .mud-pagination {
     display: inline-flex;
+    flex-wrap: wrap;
+    gap: 6px;
     align-items: center;
     margin: 0;
 
